<resources>
    <string name="app_name">RC-ctrl</string>

    <string name="button_btstate">BT state</string>
    <string name="button_headlights">Headlights</string>
    <string name="button_taillights">Taillights</string>
    <string name="button_settings">Settings</string>
    <string name="button_forward">Forward</string>
    <string name="button_backward">Backward</string>
    <string name="button_left">Left</string>
    <string name="button_right">Right</string>

    <string name="label_speed">Speed</string>
</resources>
